# MLPlayground

./: .gitattributes  .gitignore  Pipfile  README.md
.github/workflows/: pylint.yml
algo/: README.md
algo/ACTrie/: Makefile  README.md  act_test.cpp
algo/BLAST/: BLAST_Neighborhood.hpp  Makefile  README.md  blst_main.cpp  blst_test.cpp  blst_util.cpp
algo/QGramIndex/: Makefile  QGramIndex.cpp  QGramIndex.hpp  README.md  qg_test.cpp
algo/align/: Alignment.hpp  Makefile  README.md  align_main.cpp  align_test.cpp
algo/bioinfo/: README.md
algo/bioinfo/meme/: Readme.md  meme.py
algo/bioinfo/rmsd/: README.md  pdb1.txt  pdb2.txt  rmsd.py
algo/blockchain/: Block.cpp  Block.h  Blockchain.cpp  Blockchain.h  Makefile  README.md  Transaction.cpp  Transaction.h  Wallet.cpp  Wallet.h  main.cpp
algo/horspool/: Makefile  README.md  horspool.cpp  horspool.h  horspool_main.cpp  horspool_test.cpp
algo/leetcode/: 01_two_sum.py  04_median_2_arrays.py  11_container_most_water.py  15_3sum.py
algo/push-down-automaton/: Makefile  PDA.hpp  README.md  pda_test.cpp
algo/scam_algo/: Makefile  README.md  run_scam_algo.py
algo/scam_algo/config/: ac_automaton.pickle
algo/scam_algo/src/: ac_main.py  scam_algo.py  trie.py  utils.py
algo/scam_algo/tests/: test_scam_algo.py  test_utils.py
algo/sha256/: README.md  SHA256.cpp  main.cpp
algo/suftab/: Makefile  README.md  suftab.cpp  suftab.hpp  suftab_bench.cpp  suftab_main.cpp  suftab_test.cpp
spliceai/: .gitignore  CMakeLists.txt  README.md  data_loader.cpp  data_loader.h  spliceai.cpp  spliceai.h  train.cpp
(+3 files in other folders)
